# Neodymium

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
docker/: docker-compose.yml
neodymium/: __main__.py  filestore.py  firmware.py  remote_filestore.py  scraper.py
neodymium/dbmanager/: database_manager.py
test_scraper/: test.py
